fix(channels / clases): fix overflow problems and add clases header for mobile and tablet section

--- a/Edulink_page/home/sections-home-css/channels.css
+++ b/Edulink_page/home/sections-home-css/channels.css
@@ -8,8 +8,10 @@
   flex-direction: column;
   width: 100%;
   gap: 20px;
-  position: relative;border: 1px solid #ffffff40;
+  position: relative;
   border: 1px solid #ffffff40;
+  border-radius: 10px 10px 0 0;
+  display: none;
 }
 .channels-classes-dm-container {
   display: flex;
@@ -65,6 +67,7 @@
   cursor: pointer;
   transition: all 0.4s;
   background-color: #ffffff05;
+  overflow: hidden;
 }
 .group:focus, .group:active{
     background-color: #0328ee;
@@ -98,7 +101,6 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 130px;
 }
 .h6-group{
     font-size: .5em;
@@ -120,7 +122,8 @@
     max-width: 240px;
     z-index: 2;
     border-right: none;
-    
+    display: flex;
+    border-radius: 10px 0 0 0;
   }
   .channels-classes-dm-container {
   }
@@ -153,7 +156,6 @@
 @media (min-width: 1024px) {
   .channel {
     font-size: 17px;
-    border-radius: 10px 0 0 0;
   }
   .channels-classes-dm-container {
   }
