--- a/Edulink_page/home/sections-home-css/sidebar.css
+++ b/Edulink_page/home/sections-home-css/sidebar.css
@@ -6,7 +6,7 @@ aside {
 }
 @media (min-width: 1024px) {
   aside {
-    width: 80px;
+    width: 100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
